# transcribe-youtube

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  rebuild.sh
backend/: Dockerfile  claude.py  com.johannes.yt-obsidian.plist.template  cookies.py  main.py  models.py  note.py  podcast.py  pyproject.toml  requirements.txt  whisper.py  youtube.py
backend/prompts/: __init__.py  base.py  extended.py  focus.py  resources.py
backend/scripts/: check.sh  install.sh  logs.sh  start.sh  stop.sh  update.sh  whisper-setup.sh
obsidian-plugin/: .env.example  deploy.sh  manifest.json  package-lock.json  package.json
obsidian-plugin/src/: import-modal.ts  main.ts  settings.ts  sse-handler.ts  url-utils.ts  youtube-utils.ts
