[project]
name = "yt-obsidian-backend"
version = "0.1.0"
description = "FastAPI backend that imports YouTube videos as Obsidian notes"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "youtube-transcript-api==0.6.2",
    "yt-dlp==2026.3.17",
    "anthropic==0.34.2",
    "httpx==0.27.2",
    "pydantic==2.8.2",
    "sse-starlette==2.1.0",
]

[tool.uv]
package = false
